Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <p>In your <code>build.gradle</code> file:</p>
 
 <div class="highlight highlight-source-groovy"><pre>dependencies {
-    compile <span class="pl-s"><span class="pl-pds">'</span>com.movile.creditcardview:creditcardview:1.0-beta<span class="pl-pds">'</span></span>
+    compile <span class="pl-s"><span class="pl-pds">'</span>com.movile:creditcardguide:1.2-beta<span class="pl-pds">'</span></span>
 }</pre></div>
 
 <h3>
